--- a/index.html
+++ b/index.html
@@ -1,57 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Southern Inspection Services Pvt. Ltd</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <!-- header starts -->
-    <header>
-      <div class="container">
-        <div class="logo-menu">
-          <div class="logo">
-            <img src="img/logo_b.svg" alt="" />
-          </div>
-          <div class="menu">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Our Courses</a></li>
-              <li><a href="#">Our Schedules</a></li>
-              <li><a href="#">Contact Us</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </header>
-    <!-- header ends -->
 
-    <!-- banner starts -->
-    <div class="banner">
-      <div class="container">
-        <div class="slider">
-          <div class="img">
-            <img src="img/Slider.jpg" alt="Slider" />
-          </div>
-          <div class="bg-color"></div>
-          <div class="content">
-            <h1>
-              <label>Advanced Diploma in Fire &</label><br />
-              Industrial safety Management
-            </h1>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown
-            </p>
-            <a href="#">Watch on demand</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- banner ends -->
-  </body>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Southern Inspection Services Pvt. Ltd</title>
+	<link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+	<!-- header starts -->
+	<header>
+		<div class="container">
+			<div class="logo-menu">
+				<div class="logo">
+					<img src="img/logo_b.svg" alt="" />
+				</div>
+				<div class="menu">
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">About Us</a></li>
+						<li><a href="#">Our Courses</a></li>
+						<li><a href="#">Our Schedules</a></li>
+						<li><a href="#">Contact Us</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</header>
+	<!-- header ends -->
+
+	<!-- banner starts -->
+	<div class="banner">
+		<div class="container">
+			<div class="slider">
+				<div class="img">
+					<img src="img/Slider.jpg" alt="Slider" />
+				</div>
+				<div class="bg-color"></div>
+				<div class="content">
+					<h1>
+						<label>Advanced Diploma in Fire &</label><br />
+						Industrial safety Management
+					</h1>
+					<p>
+						Lorem Ipsum is simply dummy text of the printing and typesetting
+						industry. Lorem Ipsum has been the industry's standard dummy text
+						ever since the 1500s, when an unknown
+					</p>
+					<a href="#">Watch on demand</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- banner ends -->
+
+	<!-- About us starts -->
+	<div class="about">
+		<div class="container">
+			<div class="about-content">
+				<div class="heading">
+					<span class="line"></span>
+					<div class="headingTags">
+						<h5>Know About us</h5>
+						<h3>Why Southern Inspection Services ?</h3>
+					</div>
+				</div>
+				<div class="content">
+					<p>SIS is one of the global leading Certification, Consultancy, Inspection, Testing and Training Service Company. SIS is an ISO 9001: 2015 certified organisation. Southern Inspection Services Private limited, Visakhapatnam started its operations with a vision to cater the Industrial Sector in the year 2002 as a proprietary firm initiating with Training and Certification in Non-Destructive</p>
+					<a href="#">Read More</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- About us ends -->
+	
+	<!-- Partners start-->
+	<div class="partners">
+		<div class="container">
+			<div class="partners-heading">
+				<h3>Our partners</h3>
+				<span class="line"></span>
+			</div>
+			<div class="partnersImages">
+				<img src="img/partner.png" alt="">
+				<img src="img/partner.png" alt="">
+				<img src="img/partner.png" alt="">
+				<img src="img/partner.png" alt="">
+				<img src="img/partner.png" alt="">
+			</div>
+		</div>
+	</div>
+	<!-- Partners ends-->
+</body>
+
 </html>
